--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rc-time-picker",
-  "version": "3.7.0",
+  "name": "@optimind-llc/rc-time-picker",
+  "version": "3.7.0-0",
   "description": "React TimePicker",
   "keywords": [
     "react",
@@ -23,7 +23,7 @@
   "author": "wuzhao.mail@gmail.com",
   "repository": {
     "type": "git",
-    "url": "git@github.com:react-component/time-picker.git"
+    "url": "git://github.com/optimind-llc/rc-time-picker.git"
   },
   "bugs": {
     "url": "http://github.com/react-component/time-picker/issues"
